unpackaged/main/default/objects/ShipmentItem/fields/SDO_OMS_AssetId__c.field-meta.xml
<CustomField>
    <fullName>SDO_OMS_AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What: Asset
Who: Bill Macaulay When: Oct 2021.
Used to link Shipments to generated Assets</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>