unpackaged/main/default/objects/ShipmentItem/fields/SDO_OMS_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>SDO_OMS_Expiration_Date__c</fullName>
    <description>What: Shipment item
Who: Bill Macaulay When: Oct 2022
Add fields to shipment items</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>