unpackaged/main/default/objects/ShipmentItem/fields/SDO_OMS_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>SDO_OMS_Lot_Number__c</fullName>
    <description>What: Shipment item
Who: Bill Macaulay When: Oct 2022
Add fields to shipment items</description>
    <label>Lot Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>