unpackaged/main/default/objects/ShipmentItem/fields/SDO_OMS_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>SDO_OMS_Serial_Number__c</fullName>
    <description>What: Shipment item
Who: Bill Macaulay When: Oct 2022
Add fields to shipment items</description>
    <displayFormat>{0000}-{0000}</displayFormat>
    <label>Serial Number</label>
    <type>AutoNumber</type>
</CustomField>