unpackaged/main/default/objects/ShipmentItem/fields/Serial_Number2__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number2__c</fullName>
    <displayFormat>{0000}-{0000}</displayFormat>
    <label>Serial Number</label>
    <type>AutoNumber</type>
</CustomField>